@@ -840,8 +840,8 @@ MainWindow::MainWindow(QWidget *parent)
 
 MainWindow::~MainWindow()
 {
-    Settings::self()->saveMainWindowSize(expandInterfaceAction->isChecked() ? size() : expandedSize);
-    Settings::self()->saveMainWindowCollapsedSize(expandInterfaceAction->isChecked() ? collapsedSize : size());
+    Settings::self()->saveMainWindowSize(expandInterfaceAction->isChecked() ? size() : QSize(size().width(), expandedSize.height()));
+    Settings::self()->saveMainWindowCollapsedSize(expandInterfaceAction->isChecked() ? QSize(size().width(), collapsedSize.height()) : size());
     #if defined ENABLE_REMOTE_DEVICES && defined ENABLE_DEVICES_SUPPORT
     DevicesModel::self()->unmountRemote();
     #endif
@@ -2266,7 +2266,7 @@ void MainWindow::togglePlayQueue()
         setMinimumHeight(calcMinHeight());
         setMaximumHeight(QWIDGETSIZE_MAX);
     }
-    int prevWidth=size().width();
+    int width=size().width();
     splitter->setVisible(showing);
     if (!showing) {
         setWindowState(windowState()&~Qt::WindowMaximized);
@@ -2275,17 +2275,16 @@ void MainWindow::togglePlayQueue()
     adjustSize();
 
     if (showing) {
-        bool adjustWidth=size().width()!=expandedSize.width();
+        bool adjustWidth=size().width()!=width;
         bool adjustHeight=size().height()!=expandedSize.height();
         if (adjustWidth || adjustHeight) {
-            resize(adjustWidth ? expandedSize.width() : size().width(), adjustHeight ? expandedSize.height() : size().height());
+            resize(width, adjustHeight ? expandedSize.height() : size().height());
         }
         if (lastMax) {
             showMaximized();
         }
     } else {
-        // Widths also sometimes expands, so make sure this is no larger than it was before...
-    collapsedSize=QSize(collapsedSize.isValid() ? collapsedSize.width() : (size().width()>prevWidth ? prevWidth : size().width()), compactHeight);
+        collapsedSize=QSize(width, compactHeight);
         resize(collapsedSize);
         setFixedHeight(size().height());
     }
