@@ -23,6 +23,7 @@
     cmake).
 11. Add first-run wizard to enable basic configuration before Cantata is
     started for the first time.
+12. When collapse/expand, only adjust height and not width.
 
 0.9.1
 -----
